@@ -1,5 +1,11 @@
 2007-03-08  Christian Neumair  <chris@gnome-de.org>
 
+	* freedesktop.org.xml.in: add PSF, miniPSF, PSFlib types, add
+	gzippd PSF linux font type, properly subclass all gzipped types
+	(#853). Thanks to Jo Valentine-Cooper <jvc@menagerie.tf>.
+
+2007-03-08  Christian Neumair  <chris@gnome-de.org>
+
 	* freedesktop.org.xml.in: add PAK archive type (#10030).
 	Thanks to Pino Toscano <toscano.pino@tiscali.it>.
 
